# RPBot

./: .env.example  .gitignore  .vercelignore  README.md  app.py  pyproject.toml  requirements-finetune.txt  requirements.txt  run.py  start_ui.py  vercel.json
data/: sample.jsonl  sample_12.jsonl  test_cases.jsonl
data/finetune/: test.jsonl  validation.jsonl
docs/: API.md  ARCHITECTURE.md  CODE_REVIEW.md  FINETUNING.md  HOSTING.md  INPUT_OUTPUT_SCHEMA.md  PROBLEM_STATEMENT.md  TESTING.md
notebooks/: train_lora_colab.ipynb
scripts/: bench_prod_latency.py  eval_lora.py  export_finetune_dataset.py  export_lora_format.py  fix_endpoint_config.py  fix_tokenizer_config.py  generate_training_data.py  package_colab_upload.py  publish_model_card.py  serve_local_model.py  test_remote_model.py  train_lora.py  upload_model_hub.py  verify_model_export.py
src/: __init__.py  agent_runner.py  evaluator.py  exporter.py  finetune_export.py  llm_client.py  llm_judge.py  loader.py  output_parser.py  output_sanitizer.py  prompt_builder.py  schemas.py  trace.py  validator.py
tests/: test_agent.py  test_agent_runner.py  test_evaluator.py  test_finetune_export.py  test_llm_client_local.py  test_llm_judge.py  test_loader.py  test_mock_run.py  test_output_sanitizer.py  test_prompt_builder.py  test_ui_api.py  test_validator.py
ui/: app.py
ui/static/: app.js  index.html  sample-data.json  styles.css
